--- a/webinar-back/package.json
+++ b/webinar-back/package.json
@@ -17,7 +17,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "start:app": "nest start",
+    "start:app": "nest start --entryFile main.ts",
     "start:user": "nest start --entryFile user/main.ts",
     "start:category": "nest start --entryFile category/main.ts",
     "start:episode": "nest start --entryFile episode/main.ts",
@@ -43,7 +43,7 @@
     "express": "^4.21.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "mysql2": "^3.11.3",
+    "mysql2": "^3.11.5",
     "nanoid": "^5.0.9",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
