--- a/Webiline_front/package.json
+++ b/Webiline_front/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.1.1",
     "zod": "^3.24.1"
   }
