--- a/Webiline_front/package.json
+++ b/Webiline_front/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@tanstack/react-query": "^5.65.1",
     "axios": "^1.7.9",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
