--- a/webinar-back/package.json
+++ b/webinar-back/package.json
@@ -49,6 +49,7 @@
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "puppeteer-core": "^24.1.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "slugify": "^1.6.6",
