--- a/Webiline_front/package.json
+++ b/Webiline_front/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.65.1",
+    "@tanstack/react-query-devtools": "^5.65.1",
     "axios": "^1.7.9",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.54.2",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.3",
     "zod": "^3.24.1"
   }
 }
